fix jumping of trading page tables

--- a/src/modules/market/components/market-orders-positions-table/open-orders-table.style.less
+++ b/src/modules/market/components/market-orders-positions-table/open-orders-table.style.less
@@ -1,10 +1,11 @@
 @import (reference) '~assets/styles/shared';
 
-.MarketOpenOrdersList__table {
+div.MarketOpenOrdersList__table {
   color: white;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  margin-top: 0;
   position: relative;
   width: 100%;
 }
@@ -104,7 +105,7 @@
   }
 }
 
-.MarketOrders__cancelAll {
+.MarketOrders__footer {
   background: @color-light-purple;
   display: flex;
   justify-content: flex-end;
